--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -15,11 +15,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:gravity="center"
-        android:text="HOŞGELDİNİZ \nKEKOD'A SELAM VE SAYGILARIMLA"
-        android:textSize="28sp"
+        android:text="@string/hosgeldiniz"
+        android:textSize="@dimen/textSize28"
         android:textStyle="bold"
-        app:colorSpace="150dp"
-        app:colorSpeed="4dp"
+        app:colorSpace="@dimen/colorSpace150"
+        app:colorSpeed="@dimen/colorSpeed4"
         app:layout_constraintBottom_toTopOf="@+id/lottieAnimationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,15 +30,13 @@
         android:id="@+id/lottieAnimationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginStart="@dimen/margin32"
+        android:layout_marginEnd="@dimen/margin32"
+        android:layout_marginBottom="@dimen/margin64"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rainbow"
-        app:layout_constraintVertical_bias="0.9"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/weather_day_shower_rains" />
@@ -47,17 +45,16 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginStart="@dimen/margin64"
+        android:layout_marginEnd="@dimen/margin64"
+        android:layout_marginBottom="@dimen/margin64"
         android:background="@drawable/next_button"
-        android:elevation="20dp"
-        android:text="Devam Et"
+        android:elevation="@dimen/margin20"
+        android:text="@string/next"
         android:textAllCaps="false"
-        android:textColor="#005cb2"
-        android:textSize="24sp"
+        android:textColor="@color/loginButton"
+        android:textSize="@dimen/textSize24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
