--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,11 +12,28 @@
         tools:layout="@layout/fragment_splash" >
         <action
             android:id="@+id/action_splashFragment_to_weatherPageFragment"
-            app:destination="@id/weatherPageFragment" />
+            app:destination="@id/weatherPageFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_riht" />
     </fragment>
     <fragment
         android:id="@+id/weatherPageFragment"
         android:name="com.example.weather_app.ui.WeatherPageFragment"
         android:label="fragment_weather_page"
-        tools:layout="@layout/fragment_weather_page" />
+        tools:layout="@layout/fragment_weather_page" >
+        <action
+            android:id="@+id/action_weatherPageFragment_to_monthDayFragment"
+            app:destination="@id/monthDayFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_riht" />
+    </fragment>
+    <fragment
+        android:id="@+id/monthDayFragment"
+        android:name="com.example.weather_app.ui.MonthDayFragment"
+        android:label="fragment_month_day"
+        tools:layout="@layout/fragment_month_day" />
 </navigation>
